// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default primary button button renders correctly 1`] = `
<button
  className="Button Button--primary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`default primary button outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--primary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`default primary submit button renders correctly 1`] = `
<button
  className="Button Button--primary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`default primary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--primary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`default secondary button button renders correctly 1`] = `
<button
  className="Button Button--secondary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`default secondary button outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--secondary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`default secondary submit button renders correctly 1`] = `
<button
  className="Button Button--secondary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`default secondary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--secondary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`default tertiary button button renders correctly 1`] = `
<button
  className="Button Button--tertiary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`default tertiary button outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--tertiary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`default tertiary submit button renders correctly 1`] = `
<button
  className="Button Button--tertiary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`default tertiary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--tertiary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled default primary button button renders correctly 1`] = `
<button
  className="Button Button--primary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled default primary button outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--primary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled default primary submit button renders correctly 1`] = `
<button
  className="Button Button--primary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled default primary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--primary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled default secondary button button renders correctly 1`] = `
<button
  className="Button Button--secondary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled default secondary button outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--secondary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled default secondary submit button renders correctly 1`] = `
<button
  className="Button Button--secondary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled default secondary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--secondary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled default tertiary button button renders correctly 1`] = `
<button
  className="Button Button--tertiary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled default tertiary button outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--tertiary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled default tertiary submit button renders correctly 1`] = `
<button
  className="Button Button--tertiary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled default tertiary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--outline--tertiary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled large primary button button renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled large primary button outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--primary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled large primary submit button renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled large primary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--primary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled large secondary button button renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled large secondary button outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--secondary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled large secondary submit button renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled large secondary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--secondary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled large tertiary button button renders correctly 1`] = `
<button
  className="Button Button--large Button--tertiary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled large tertiary button outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--tertiary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled large tertiary submit button renders correctly 1`] = `
<button
  className="Button Button--large Button--tertiary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled large tertiary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--tertiary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled small primary button button renders correctly 1`] = `
<button
  className="Button Button--small Button--primary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled small primary button outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--primary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled small primary submit button renders correctly 1`] = `
<button
  className="Button Button--small Button--primary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled small primary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--primary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled small secondary button button renders correctly 1`] = `
<button
  className="Button Button--small Button--secondary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled small secondary button outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--secondary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled small secondary submit button renders correctly 1`] = `
<button
  className="Button Button--small Button--secondary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled small secondary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--secondary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled small tertiary button button renders correctly 1`] = `
<button
  className="Button Button--small Button--tertiary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled small tertiary button outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--tertiary"
  disabled={true}
  type="button"
>
  Hello
</button>
`;

exports[`disabled small tertiary submit button renders correctly 1`] = `
<button
  className="Button Button--small Button--tertiary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`disabled small tertiary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--tertiary"
  disabled={true}
  type="submit"
>
  Hello
</button>
`;

exports[`large primary button button renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`large primary button outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--primary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`large primary submit button renders correctly 1`] = `
<button
  className="Button Button--large Button--primary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`large primary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--primary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`large secondary button button renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`large secondary button outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--secondary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`large secondary submit button renders correctly 1`] = `
<button
  className="Button Button--large Button--secondary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`large secondary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--secondary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`large tertiary button button renders correctly 1`] = `
<button
  className="Button Button--large Button--tertiary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`large tertiary button outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--tertiary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`large tertiary submit button renders correctly 1`] = `
<button
  className="Button Button--large Button--tertiary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`large tertiary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--large Button--outline--tertiary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`small primary button button renders correctly 1`] = `
<button
  className="Button Button--small Button--primary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`small primary button outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--primary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`small primary submit button renders correctly 1`] = `
<button
  className="Button Button--small Button--primary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`small primary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--primary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`small secondary button button renders correctly 1`] = `
<button
  className="Button Button--small Button--secondary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`small secondary button outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--secondary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`small secondary submit button renders correctly 1`] = `
<button
  className="Button Button--small Button--secondary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`small secondary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--secondary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`small tertiary button button renders correctly 1`] = `
<button
  className="Button Button--small Button--tertiary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`small tertiary button outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--tertiary"
  disabled={false}
  type="button"
>
  Hello
</button>
`;

exports[`small tertiary submit button renders correctly 1`] = `
<button
  className="Button Button--small Button--tertiary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;

exports[`small tertiary submit outlined button renders correctly 1`] = `
<button
  className="Button Button--small Button--outline--tertiary"
  disabled={false}
  type="submit"
>
  Hello
</button>
`;
